# esp32-co2-station

./: README-ru.md  README.md  WHATISIT.md
main/: CMakeLists.txt  idf_component.yml  main.c  str.c  str.h  tzones.c
misc/: generate_tzones.py
